[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/GUI/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/Montserrat-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/GUI/Menu/menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1505.0
margin_bottom = -255.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -175.5
margin_top = 140.0
margin_right = 171.5
margin_bottom = 213.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_right = 347.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Main Menu"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 77.0
margin_right = 347.0
margin_bottom = 117.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadBtn" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 121.0
margin_right = 347.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 1 )
text = "Load Game"

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 198.0
margin_right = 347.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -173.5
margin_top = -123.0
margin_right = 173.5
margin_bottom = -50.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NinePatchRect/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/LoadBtn" to="." method="_on_LoadBtn_pressed"]
[connection signal="pressed" from="NinePatchRect/Resume" to="." method="_on_Resume_pressed"]
